samples/_failures_safe/1761606489_70985f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fc8915e.c: In function ‘main’:
./samples/SAFE/__tmp_4fc8915e.c:148:9: error: expected declaration or statement at end of input
  148 |         keyword[strcspn(keyword, "\n")] = '\0';
      |         ^~~~~~~
./samples/SAFE/__tmp_4fc8915e.c:148:9: error: expected declaration or statement at end of input
